// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global doesn't write falsy css callback 1`] = `<DocumentFragment />`;

exports[`Global writes css 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Global writes css callback 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1d3rnff-global"
  >
    color:var(--ui-black);
  </style>
</DocumentFragment>
`;

exports[`Global writes css object 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Global writes css w/ nonce 1`] = `
<DocumentFragment>
  <style
    data-cache="-ui"
    data-dash="1abu38z-global"
    nonce="E8gagwlWEGlgwel"
  >
    display:block;
  </style>
</DocumentFragment>
`;

exports[`Theme allows additional props and class names: span 1`] = `
<DocumentFragment>
  <div
    class="foo bar -ui-light-theme"
    role="button"
  />
</DocumentFragment>
`;

exports[`Theme renders \`as\` prop: span 1`] = `
<DocumentFragment>
  <span
    class="-ui-dark-theme"
  />
</DocumentFragment>
`;

exports[`Theme throws when theme name wasn't found 1`] = `"Theme not found: \\"medium\\""`;

exports[`Theme uses name prop to derive className: span 1`] = `
<DocumentFragment>
  <div
    class="-ui-light-theme"
  />
</DocumentFragment>
`;

exports[`useGlobal sets global styles with a function value: global 1`] = `
<style
  data-dash="-ui"
>
  
  body{background:var(--ui-color-blue);}
</style>
`;

exports[`useGlobal sets global styles with a function value: variables 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--ui-color-blue:#09a;}
</style>
`;

exports[`useGlobal sets global styles with a string value: :root 1`] = `
<style
  data-dash="-ui"
>
  
  :root{--blue:#09a;}
</style>
`;

exports[`useVariables provides dash variables via DashProvider 1`] = `
Object {
  "blue": "var(--ui-blue)",
  "red": "var(--ui-red)",
}
`;

exports[`useVariables provides dash variables via styles() 1`] = `
Object {
  "blue": "var(--ui-blue)",
  "red": "var(--ui-red)",
}
`;
